syntax = "proto3";

package v2ray.core.proxy.naive;
option csharp_namespace = "V2Ray.Core.Proxy.Naive";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/naive";
option java_package = "com.v2ray.core.proxy.naive";
option java_multiple_files = true;

message Account {
  string username = 1;
  string password = 2;
}

// NaiveServerEndpoint extends ServerEndpoint with naive-specific fields
message NaiveServerEndpoint {
  string address = 1;
  uint32 port = 2;
  string username = 3;
  string password = 4;
}

// ClientConfig is the protobuf config for naive client.
message ClientConfig {
  // Server is a list of upstream naive server endpoints.
  repeated NaiveServerEndpoint servers = 1;
}
